# music_gen

./: .gitignore  README.md  main.py  midi_reader.py  pyproject.toml  test.ly
curso_001/: __init__.py  _player.py  lesson.ipynb  lesson10.py  lesson11.py  lesson2.py  lesson4.py  lesson5.py  lesson6.py  lesson8.py
curso_002/: lesson10_chord.py  lesson11.a.py  lesson11.b_timeVarying.py  lesson12_isorhytm.py  lesson13_conterpoint.py  lesson14_fibonacci.py  lesson15.a_ableton.py  lesson15.b_bass.py  lesson16_ableton.py  lesson1_text.py  lesson2.py  lesson2_random.py  lesson3_scale.py  lesson4_keyboard.py  lesson5_acceleration.py  lesson6_math.py  lesson7_partitura.py  lesson9_mouse.py  read1.py  test.py
music/: Jealous_guy.mid  chord_arpeggios.mid  random_melody.mid  rock_drums.mid  scamp_test.mid
prompts/: simple.md  text_to_chords.md  text_to_drums.md  text_to_melody.md
ref/: chatGPT_Text_to_MIDI_(advanced_moode).ipynb  chatgpt_text_to_midi_(advanced_moode).py
src/: sound_library.py
test/: conftest.py
test/unit/: notes_test.py  scamp_test.py
